--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,7 @@ body {
   font-size: 18px;
   font-family: 'lato';
   margin: 0;
+  background: #FAFAFA;
 }
 
 .containerHeader {
@@ -50,6 +51,10 @@ body {
 .container {
     width: 80%;
     margin: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 30px 10px;
+    margin-top: 30px;
+    background: #fff;
 }
 
 .inscriptionPage {
@@ -57,6 +62,7 @@ body {
   margin-left: 50px;
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .orgaticTitle {
@@ -69,6 +75,10 @@ body {
     color: #4d8c39;
 }
 
+.index-sideText {
+    text-align: center;
+}
+
 .mainParagraph {
   margin: 50px 0;
   font-size: 20px;
@@ -76,7 +86,6 @@ body {
 
 .connexion {
   margin-left: 100px;
-  background:#F9FAFB;
   width: 380px;
   display: flex;
   justify-content: center;
@@ -84,12 +93,12 @@ body {
 }
 
 .connexionTitle {
-  color: green;
-  font-size: 35px;
- margin-top: 50px;
- margin-bottom: 50px;
- display: flex;
- justify-content: center;
+    color: #45a065;
+    font-size: 35px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    font-weight: 500;
 }
 
 form {
@@ -200,7 +209,6 @@ height: 15px;
   margin-left: 60px;
 }
 
-
 .Commentaires1 {
   color: #535353;
   font-weight: lighter;
@@ -224,9 +232,11 @@ height: 15px;
 
 .msg {
     width: 65%;
+    text-align: center;
     display: block;
+    line-height: 1.5em;
 }
 
 .msg.error {
-    color: red;
+    color: #da3c3c;
 }
