--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   margin-top: 0;
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  width: 80%;
   margin: auto;
   padding-top: 50px;
 }
@@ -41,6 +41,7 @@ body {
     font-size: 18px;
     color: #535353;
     vertical-align: -webkit-baseline-middle;
+    display: -webkit-box;
 }
 
 .logo {
@@ -141,7 +142,7 @@ textarea {
   text-align: center;
   display: flex;
   justify-content: flex-end;
-  width: 90%;
+  width: 80%;
   margin: auto;
 }
 
@@ -161,8 +162,13 @@ textarea {
 }
 
 .ContainerTheme {
-  position: fixed;
+  position: absolute;
   margin-top: 180px;
+  margin-left: 20px;
+}
+
+.ContainerTheme a {
+  color: #168B37;
 }
 
 .Devoirs {
@@ -189,17 +195,15 @@ textarea {
   margin-left: 268px;
   background-color: #F9FAFB;
   width:910px;
-  height:155px;
   margin-bottom: 30px;
+  display: inline-block;
 }
 
 .hearth {
-display: flex;
-float: right;
-margin-right: 15px;
-margin-top: 30px;
-width: 15px;
-height: 15px;
+    float: right;
+    margin: 20px;
+    width: 16px;
+    height: 16px;
 }
 
 .Name {
