--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19,10 +19,8 @@ body {
 .menu {
   color: #535353;
   font-size: 20px;
-  margin-left: 500px;
   font-weight: 400;
   display: flex;
-  flex-direction: row;
 }
 
 .menuLI {
@@ -35,6 +33,10 @@ body {
 .menuLI-isactive {
   color: #168B37;
   font-weight: 500;
+}
+
+.account {
+    text-align: center;
 }
 
 .account a {
@@ -148,7 +150,7 @@ textarea {
 
 .classes ul li {
     display: inline-block;
-    margin: 30px;
+    margin: 30px 0 30px 30px;
     font-size: 21px;
     font-weight: 500;
 }
